# Graph_Optimization_with_g2o

./: README.md
2D_Translation_Optimization/: CMakeLists.txt  main.cpp
Curve_fit/: CMakeLists.txt  main.cpp
Line_fit/: CMakeLists.txt  main.cpp
Polinomial_fit/: CMakeLists.txt  main.cpp
